--- a/css/common.css
+++ b/css/common.css
@@ -16,6 +16,17 @@ body {
 
 /* ============LIST CATEGORIES============ */
 
+
+
+#categories {
+border-radius: 8px;
+  padding: 24px;
+  width: 440px;
+  height: 888px;
+  background: #fff;
+}
+
+
 .title {
 font-family: "Montserrat", sans-serif;
   font-weight: 600;
@@ -31,19 +42,26 @@ font-family: "Montserrat", sans-serif;
   list-style: none;
 border-radius: 8px;
   padding: 16px;
-  width: 392px;
+  min-width: 392px;
   background-color: #f6f6fe;
   margin-bottom: 24px;
 }
 
+.item-animals {
+  height: 264px;
+}
+
 .list {
 list-style: none;
-  padding: 0;
-  margin: 0;
+padding: 0;
+gap: 8px;
+display: grid;
 }
 
 
 .taste-item {
+  width: 360px;
+    height: 40px;
   font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -51,15 +69,10 @@ list-style: none;
     letter-spacing: 0.04em;
     color: #2e2f42;
 padding: 8px;
-  margin-bottom: 8px;
   border: 1px solid #808080;
   border-radius: 4px;
   box-sizing: border-box;
   background-color: #f6f6fe;
-}
-
-.taste-item:last-child {
-  margin-bottom: 0;
 }
 
 
@@ -90,6 +103,14 @@ padding: 8px;
 
 
 /* ============TEXT FIELD============ */
+.container-name {
+border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 136px;
+  background: #fff;
+}
+
 
 #name-input {
 font-family: "Montserrat", sans-serif;
@@ -98,19 +119,21 @@ font-family: "Montserrat", sans-serif;
     line-height: 150%;
     letter-spacing: 0.04em;
     color: #2e2f42;
+    background: #fff;
     width: 360px;
       height: 40px;
       border: 1px solid #808080;
         border-radius: 4px;
       outline: transparent;
+      padding-left: 16px;
 }
 
-#name-input:hover, #name-input:focus {
+#name-input:hover  {
 border: 1px solid #000;
 
 }
 
-#name-input:active {
+#name-input:active, #name-input:focus {
  
 border: 1px solid #808080;
 }
@@ -125,8 +148,15 @@ font-family: "Montserrat", sans-serif;
 }
 
 
+/* ============FORM============ */
 
-
+.container-form {
+border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 256px;
+  background: #fff;
+}
 
 .label {
   display: block;
@@ -145,5 +175,149 @@ width: 360px;
   height: 40px;
   border: 1px solid #808080;
   border-radius: 4px;
+  outline: transparent;
+background: #fff;
+}
 
+.input:hover {
+  border: 1px solid #000;
+
+}
+
+.input:active,
+.input:focus {
+
+  border: 1px solid #808080;
+}
+
+.button-login {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+  border: none;
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: 86px;
+    height: 40px;
+    background: #4e75ff;
+}
+
+/* ============VIGET============ */
+
+.widget {
+  border-radius: 8px;
+    padding: 100px 88px;
+    width: 345px;
+    height: 280px;
+  background: #fff;
+}
+
+.background-color {
+font-family: "Montserrat", sans-serif;
+font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+
+.change-color {
+ font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border: none;
+border-radius: 8px;  
+  width: 148px;
+  height: 40px;
+  background: #4e75ff;  
+}
+
+/* ============SCRIPT============ */
+.container-script {
+border-radius: 8px;
+  padding: 24px;
+  width: 534px;
+  min-height: 302px;
+  background: #fff;
+}
+
+#controls {
+  display: flex;
+border-radius: 8px;
+  padding: 32px;
+  width: 486px;
+  height: 104px;
+  background: #f6f6fe;
+  margin-bottom: 16px;
+  gap: 16px;
+}
+
+.input-number {
+border: 1px solid #808080;
+  border-radius: 8px;
+  padding-left: 72px;
+  width: 150px;
+  height: 40px;
+  background: #f6f6fe;
+font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    outline: transparent;
+}
+
+.input-number::placeholder {
+  padding: 8px 72px;
+}
+
+.button-create {
+  border: none;
+border-radius: 8px;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.button-destroy {
+border: none;
+border-radius: 8px;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  background: #ff4e4e;
+font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+#boxes {
+  display: flex;
+  flex-wrap: wrap;
+border-radius: 8px;
+  padding-top: 32px;
+  padding-left: 32px;
+  width: 486px;
+  min-height: 134px;
+  background: #f6f6fe;
+  gap: 44px;
 }
